Focus README on general footprint regression